# Pomodoro_app

./: README.md  index.html  package-lock.json  package.json
src/: App.css  App.jsx  App_v1.jsx  TitleBar.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/pomodoro/: part1-context.jsx  part10-main.jsx  part11-titlebar.jsx  part12-index.jsx  part2-hooks.jsx  part3-utilities.jsx  part4-modals.jsx  part5-timer.jsx  part6-tasks.jsx  part7-analytics.jsx  part8-history.jsx  part9-layout.jsx
