[package]
name = "pomodoro_timer"
version = "0.1.0"
description = "A Tauri App"
authors = ["FeatAstro"]
edition = "2021"

[lib]
name = "pomodoro_timer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
tauri-plugin-fs = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
